--- a/python_basic/10_flask/templates/menu.html
+++ b/python_basic/10_flask/templates/menu.html
@@ -17,6 +17,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/inputform">회원입력폼</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/customerlist">회원목록</a>
+          </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Dropdown
