--- a/python_basic/10_flask/templates/menu.html
+++ b/python_basic/10_flask/templates/menu.html
@@ -20,6 +20,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/customerlist">회원목록</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/mnist">숫자인식모델</a>
+          </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Dropdown
